Additions and fixes

--- a/tasks/01.sockets/Sockets.csproj
+++ b/tasks/01.sockets/Sockets.csproj
@@ -18,5 +18,8 @@
     <None Update="hello.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="time.template.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
