--- a/tasks/04.bad-news/BadNews/BadNews.csproj
+++ b/tasks/04.bad-news/BadNews/BadNews.csproj
@@ -9,4 +9,11 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Views\Errors\StatusCode.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
