Переделать список новостей с использованием MVC

--- a/tasks/04.bad-news/BadNews/BadNews.csproj
+++ b/tasks/04.bad-news/BadNews/BadNews.csproj
@@ -19,5 +19,9 @@
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+    <Content Update="Views\News\Index.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 </Project>
